src/test/resources/30/expanded/valid/preview-pub/EPUB/lorem.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:title>Lorem Ipsum</dc:title>
        <dc:language>la</dc:language>
        <dc:type>preview</dc:type>

        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446667441231</dc:identifier>
        <meta property="dcterms:modified">2011-09-01T17:18:00Z</meta>
        <dc:source>urn:isbn:9782367932095</dc:source>

        <link href="http://example.org/book/9781448103706" rel="acquire" media-type="text/html"/>
    </metadata>
    <manifest>
        <item id="t1" href="lorem.xhtml" properties="nav" media-type="application/xhtml+xml"/>
        <item id="css" href="lorem.css" media-type="text/css"/>
    </manifest>
    <spine>
        <itemref idref="t1"/>
    </spine>
</package>
