src/test/resources/30/expanded/invalid/dict-invalidcontent/EPUB/package.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-4466674412314</dc:identifier>
        <dc:title>DICT</dc:title>
        <dc:date>2011-09-01</dc:date>
        <meta property="dcterms:modified">2011-09-01T17:18:00Z</meta>
        <dc:type>dictionary</dc:type>
        <dc:language>en</dc:language>
        <meta property="source-language">en</meta>
        <meta property="target-language">en</meta>
    </metadata>
    <manifest>
        <item id="css" href="style.css" media-type="text/css"/>
        <item id="nav" href="nav.xhtml" properties="nav" media-type="application/xhtml+xml"/>
        <item id="dict" href="dict.xhtml" media-type="application/xhtml+xml"/>
        <item id="skm" href="search.xml" properties="dictionary search-key-map"
            media-type="application/vnd.epub.search-key-map+xml"/>
    </manifest>
    <spine>
        <itemref idref="nav"/>
        <itemref idref="dict"/>
    </spine>
</package>
